--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 #!! ERROR: ava is undefined. Use list command to see defined gitignore types !!#
 
 ### Gradle ###
-#.gradle
-#build/
+.gradle
+build/
 
 # Ignore Gradle GUI config
-#gradle-app.setting
+gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-#!gradle-wrapper.jar
+!gradle-wrapper.jar
