--- a/build.gradle
+++ b/build.gradle
@@ -1,54 +1,44 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'com.bmuschko:gradle-tomcat-plugin:2.0'
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'war'
-apply plugin: 'com.bmuschko.tomcat'
+apply plugin: 'eclipse-wtp'
+apply plugin: 'jetty'
 
-// JDK version source compatibility
+// JDK 7
 sourceCompatibility = 1.7
-// project version
-version = '1.0'
-// War file name
-war.baseName = 'jcg-gradle-war-example'
-// Web directory, this overrides the default value "webapp"
-project.webAppDirName = 'WebContent'
+targetCompatibility = 1.7
 
 repositories {
     mavenLocal()
     mavenCentral()
 }
 
-// Set source directory
-sourceSets {
-        main {
-            java {
-                srcDir 'src'
-            }
-        }
-    }
-
-// dependencies to run on tomcat, are mandatory for tomcat plugin
 dependencies {
-    def tomcatVersion = '7.0.57'
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
-    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
-        exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
-    }
+    compile 'ch.qos.logback:logback-classic:1.1.3'
+    compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+    compile 'javax.servlet:jstl:1.2'
 }
 
-// context where tomcat is deployed, by defautl localhost:8080/
-tomcatRun.contextPath = '/'
-tomcatRunWar.contextPath = '/'
+// Embeded Jetty for testing
+jettyRun{
+    contextPath = "spring4"
+    httpPort = 8080
+}
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+jettyRunWar{
+    contextPath = "spring4"
+    httpPort = 8080
+}
+
+//For Eclipse IDE only
+eclipse {
+
+  wtp {
+    component {
+      
+      //define context path, default to project folder name
+      contextPath = 'spring4'
+      
+    }
+    
+  }
 }
