--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ dependencies {
 
 // Embeded Jetty for testing
 jettyRun{
-    contextPath = "spring4"
+    contextPath = ""
     httpPort = 8080
 }
 
 jettyRunWar{
-    contextPath = "spring4"
+    contextPath = ""
     httpPort = 8080
 }
 
@@ -36,7 +36,7 @@ eclipse {
     component {
       
       //define context path, default to project folder name
-      contextPath = 'spring4'
+      contextPath = ''
       
     }
     
