--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
     compile 'javax.servlet:jstl:1.2'
+    compile "javax.ws.rs:jsr311-api:1.1.1"
+    compile 'com.sun.jersey:jersey-server:1.13'
+    compile 'com.sun.jersey:jersey-core:1.13'
+    compile 'com.sun.jersey:jersey-servlet:1.13'
 }
 
 // Embeded Jetty for testing
