--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
     <servlet-mapping>
         <servlet-name>hello-dispatcher</servlet-name>
-        <url-pattern>/search/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <!-- For root context -->
