--- a/build.gradle
+++ b/build.gradle
@@ -11,18 +11,23 @@ repositories {
     mavenLocal()
     mavenCentral()
 }
-
+configurations {
+    all*.exclude group: 'org.bytedeco', module: 'javacpp-presets'
+}
 dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
     compile 'javax.servlet:jstl:1.2'
-    compile "javax.ws.rs:jsr311-api:1.1.1"
-    compile 'com.sun.jersey:jersey-server:1.13'
-    compile 'com.sun.jersey:jersey-core:1.13'
-    compile 'com.sun.jersey:jersey-servlet:1.13'
     compile 'redis.clients:jedis:2.4.2'
+    compile 'org.glassfish.web:javax.el:2.2.5'
+    
     compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    compile group: 'org.deeplearning4j', name: 'deeplearning4j-nlp', version: '0.4.0'
+    compile group: 'org.deeplearning4j', name: 'deeplearning4j-ui-components', version: '0.4.0'
+    compile group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '0.4.0'
+    compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+
 }
 
 // Embeded Jetty for testing
